filter collapse radio buttons fixed

--- a/src/components/Tabs/tabs.css
+++ b/src/components/Tabs/tabs.css
@@ -291,4 +291,7 @@
   display: flex;
   font-weight: 500 !important;
   flex-direction: column;
+  align-items: center !important;
+  justify-content: center !important;
+  margin-right: 20px !important;
 }
